# dodge-god

./: .gitignore  cabal.project.freeze  dodge-god.cabal  flake.nix  fourmolu.yaml  index.js  index.mjs  package-lock.json  package.json  things-to-fix-on-client
.github/workflows/: pr.yml
lib/: Decrypt.hs  Encrypt.hs  Server.hs  Types.hs  Util.hs
src/: Main.hs
test/: ArbitraryInstances.hs  Test.hs
