cabal-version:      3.0
name:               dodge-god
version:            0.1.0.0

common shared
  default-extensions: DeriveAnyClass, OverloadedStrings
  default-language: GHC2021
  build-depends:    base ^>=4.16.3.0,
                    text,
                    aeson
  ghc-options:      -Wall -O2

executable dodge-god
  import:           shared
  main-is:          Main.hs

  build-depends:    scotty,
                    decrypt,
  hs-source-dirs:   src

test-suite decrypt-test
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:    tasty,
                    tasty-hunit,
                    decrypt
  hs-source-dirs:   test

library decrypt
  import:           shared
  build-depends:    bytestring,
                    binary,
                    base64-bytestring,
                    zlib
  hs-source-dirs:   lib
  exposed-modules:  Decrypt,
                    Encrypt,
                    Types,

