cabal-version:      3.0
name:               dodge-god
version:            0.1.0.0

common shared
  default-extensions: DeriveAnyClass
                    , OverloadedStrings
                    , NoFieldSelectors
                    , OverloadedRecordDot
  default-language: GHC2021
  build-depends:    base ^>=4.17.0.0,
                    text,
                    aeson
  ghc-options:      -Wall -O2

executable dodge-god
  import:           shared
  main-is:          Main.hs

  build-depends:    dodge-god-lib,
  hs-source-dirs:   src

library dodge-god-lib
  import:           shared,
  build-depends:    bytestring,
                    binary,
                    base64-bytestring,
                    scotty,
                    zlib,
                    http-types,
                    exceptions
  hs-source-dirs:   lib
  exposed-modules:  Decrypt,
                    Encrypt,
                    Server,
                    Types,

test-suite decrypt-test
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    dodge-god-lib
  hs-source-dirs:   test
  other-modules:    ArbitraryInstances

